OpenXR-MotionCompensation Changelog

Version 0.2.5

	Graphical overlay
	- added toggle to deactivate initialization

	Bugfixes
	- fixed crash on vr session end with oxrtk present
	- fixed bug during physical tracker fallback initialization
	
Version 0.2.4

	Graphical overlay
	- added marker to visualize reference tracker
	- support for DirectX 11 and 12
	
	Disable functionality
	- deactivate completely
	- omit physical tracker initialization
	
	Configure pose reversion on frame submission
	- (optional) eye position cache (pre 0.1.4 method)
	- cache tolerance configurable

Version 0.2.3

	Tracker connection loss detection
	- unresponsive tracker is detected
	- motion compensation is deactivated after timeout

	MMF Reader
	- added application to display input values from memory mapped file(s) used for virtual trackers
	
	Installation Executable
	- Reorder loading of OpenXR Tookit to enable eye tracking / dynamic foveated rendering

	Bugfixes:
	- fixed loading order of OpenXR Toolkit to enable dynamic foveated rendering
	
Version 0.2.2

	Vive Tracker
	- added support for Vive tracker
	
	Bugfixes
	- fixed crash to desktop on physical tracker initialization (Assetto Corsa Competizione with OpenComposite)

	Miscellaneous
	- minor logging improvements (milliseconds in timestamps, added entries for initialization API calls)
	
Version 0.2.1
	
	Hotfixes
	- fixed motion controller initialization for apps not using them natively
	- fixed conflict with other Open XR API Layers
	
	Installation executable
	- preserve existing registry entry to maintain loading order
	- deactivated loading order fix for ultraleap api layer
	- fixed deletion of malformed registry key (XRNeckSafer)
	
	Miscellaneous
	- added hint about dof inversion in user guide

Version 0.2.0
	
	OpenComposite bugfixes
	- fixed initialization error -46/-47 (action set not/already attached)
	- include 2d overlays into compensation
	
	Installation executable
	- move config files to appdata directory