@@ -33,6 +33,8 @@ cor_a = 0.0
 cor_b = 0.0
 cor_c = 0.0
 cor_d = 0.0
+; overlay marker size (in cm)
+marker_size = 10.0
 
 [translation_filter]
 ; value between 0.0 (filter off) and 1.0 (initial location is never changed)
